--- a/lib/src/components/hero_component.html
+++ b/lib/src/components/hero_component.html
@@ -27,5 +27,6 @@
   <div>
     <hr />
     <button class="button light" (click)="goBack()">Back</button>
+    <button class="button flavour" (click)="save()">Save</button>
   </div>
 </section>
