--- a/lib/styles/global.scss
+++ b/lib/styles/global.scss
@@ -1,188 +1,236 @@
 @import "_variables.scss";
 
 input {
-    padding: 0.5em;
-    border-radius: $border-radius;
-    border-style: solid;
-    color: $color-text-gray;
+  padding: 0.5em;
+  border-radius: $border-radius;
+  border-style: solid;
+  color: $color-text-gray;
+  transition: all $trans-speed;
+  &:focus {
     transition: all $trans-speed;
-    &:focus {
-        transition: all $trans-speed;
-        color: $color-text-dark;
-    }
+    color: $color-text-dark;
+  }
 }
 
 hr {
-    border-color: $color-border-gray;
-    width: 100%;
-    margin: 1rem 0;
+  border-color: $color-border-gray;
+  width: 100%;
+  margin: 1rem 0;
 }
 
 h1,
 h2 {
-    font-family: $font-primary;
+  font-family: $font-primary;
 }
 
 nav {
-    display: flex;
-    a {
-        height: 100%;
-        padding: 0.5rem 1.5em;
-        border-radius: $border-radius $border-radius 0 0;
-        text-decoration: none;
-        background-color: $color-background-light;
-        color: $color-text-dark;
-        font-weight: 500;
-        transition: all $trans-speed;
-        &.active {
-            transition: all $trans-speed;
-            background-color: $color-background-darkblue;
-            color: $color-text-white;
-            font-weight: 600;
-            &:hover {
-                background-color: $color-background-darkblue;
-            }
-        }
-        &:hover {
-            transition: all $trans-speed;
-            color: $color-text-white;
-            background-color: lighten($color-background-darkblue, 10);
-        }
+  display: flex;
+  a {
+    height: 100%;
+    padding: 0.5rem 1.5em;
+    border-radius: $border-radius $border-radius 0 0;
+    text-decoration: none;
+    background-color: $color-background-light;
+    color: $color-text-dark;
+    font-weight: 500;
+    transition: all $trans-speed;
+    &.active {
+      transition: all $trans-speed;
+      background-color: $color-background-darkblue;
+      color: $color-text-white;
+      font-weight: 600;
+      &:hover {
+        background-color: $color-background-darkblue;
+      }
+    }
+    &:hover {
+      transition: all $trans-speed;
+      color: $color-text-white;
+      background-color: lighten($color-background-darkblue, 10);
+    }
 
-        &:not(:first-child) {
-            margin-left: 0.05rem;
-        }
+    &:not(:first-child) {
+      margin-left: 0.05rem;
     }
-    + hr {
-        margin-top: 0;
-    }
+  }
+  + hr {
+    margin-top: 0;
+  }
 }
 
 .container {
-    margin: auto;
-    display: flex;
-    padding: 0 1rem;
-    width: 70%;
-    flex-direction: column;
-    flex-grow: 1;
+  margin: auto;
+  display: flex;
+  padding: 0 1rem;
+  width: 70%;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .grid,
 .cols {
-    display: grid;
+  display: grid;
 }
 
 .cols {
-    > a {
-        text-decoration: none;
+  > a {
+    text-decoration: none;
 
-        &:hover {
-            .box {
-                transition: all $trans-speed;
-                background-color: lighten($color-background-darkblue, 8);
-            }
-        }
+    &:hover {
+      .box {
+        transition: all $trans-speed;
+        background-color: lighten($color-background-darkblue, 8);
+      }
     }
-    .col {
-        display: flex;
-    }
+  }
+  .col {
+    display: flex;
+  }
 }
 
 .box {
-    border-radius: $border-radius;
-    background-color: $color-background-darkblue;
-    color: $color-text-white;
-    transition: all $trans-speed;
+  border-radius: $border-radius;
+  background-color: $color-background-darkblue;
+  color: $color-text-white;
+  transition: all $trans-speed;
 }
 
 .card {
-    padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem;
 }
 
 .button {
-    display: inline-block;
-    border-radius: $border-radius;
-    padding: 0.5em 1em;
-    border: none;
-    cursor: pointer;
-    &.flavour {
-        background-color: $color-flavour;
-        color: $color-text-white;
-        transition: all $trans-speed;
-        &:hover {
-            transition: all $trans-speed;
-            background-color: darken($color-flavour, 10);
-        }
+  display: inline-block;
+  border-radius: $border-radius;
+  padding: 0.5em 1em;
+  border: none;
+  cursor: pointer;
+  &.flavour {
+    background-color: $color-flavour;
+    color: $color-text-white;
+    transition: all $trans-speed;
+    &:hover {
+      transition: all $trans-speed;
+      background-color: darken($color-flavour, 10);
     }
-    &.light {
-        background-color: $color-background-light;
-        color: $color-text-dark;
-        transition: all $trans-speed;
-        &:hover {
-            transition: all $trans-speed;
-            background-color: darken($color-background-light, 5);
-        }
+  }
+  &.light {
+    background-color: $color-background-light;
+    color: $color-text-dark;
+    transition: all $trans-speed;
+    &:hover {
+      transition: all $trans-speed;
+      background-color: darken($color-background-light, 5);
     }
+  }
+  &.delete {
+    background-color: $color-background-light;
+    color: $color-text-dark;
+    transition: all $trans-speed;
+    &:hover {
+      transition: all $trans-speed;
+      background-color: darken($color-background-light, 5);
+    }
+  }
+  &.inline {
+    padding: 0 0.5em;
+    background-color: transparent;
+    color: $color-text-dark;
+    transition: all $trans-speed;
+    &:hover {
+      transition: all $trans-speed;
+      color: lighten($color-text-dark, 25);
+    }
+    &:focus,
+    &:active {
+      border: none;
+    }
+  }
+}
+
+.control {
+  display: flex;
+  align-items: stretch;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+
+  input {
+    max-width: 10rem;
+    + .button {
+      margin-left: 0.25rem;
+    }
+  }
+  label {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .table {
-    th,
-    td {
-        padding: 0.25em 0.5em;
-        text-align: left;
-    }
-    input {
-        border-color: $color-border-gray;
-    }
+  th,
+  td {
+    padding: 0.25em 0.5em;
+    text-align: left;
+  }
+  input {
+    border-color: $color-border-gray;
+  }
 }
 
 .selected {
-    background-color: #899296 !important;
-    color: white;
+  background-color: #899296 !important;
+  color: white;
 }
 .heroes {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-    font-family: $font-primary;
-    li {
-        cursor: pointer;
-        position: relative;
-        left: 0;
-        background-color: #eee;
-        margin: 0.5em;
-        padding: 0.3em 0;
-        height: 1.6em;
-        border-radius: $border-radius;
-        transition: all $trans-speed;
+  margin: 0 0 2em 0;
+  list-style-type: none;
+  padding: 0;
+  width: 15em;
+  font-family: $font-primary;
+  li {
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    background-color: #eee;
+    margin: 0.5em;
+    padding: 0.3em 0;
+    height: 1.6em;
+    border-radius: $border-radius;
+    transition: all $trans-speed;
 
-        &.selected:hover {
-            color: white;
-        }
-        &:hover {
-            color: #607d8b;
-            background-color: #eee;
-            left: 0.1em;
-            transition: all $trans-speed;
-        }
+    &.selected:hover {
+      color: white;
     }
-    .text {
-        position: relative;
-        top: -3px;
+    &:hover {
+      color: #607d8b;
+      background-color: #eee;
+      left: 0.1em;
+      transition: all $trans-speed;
     }
-    .badge {
-        display: inline-block;
-        font-size: small;
-        color: $color-text-white;
-        padding: 0.8em 0.7em 0 0.7em;
-        background-color: #607d8b;
-        line-height: 1em;
-        position: relative;
-        left: -1px;
-        top: -4px;
-        height: 1.8em;
-        margin-right: 0.8em;
-        border-radius: 4px 0 0 4px;
-    }
+  }
+  .text {
+    position: relative;
+    top: -3px;
+  }
+  .button {
+    position: absolute;
+    right: 5%;
+    top: 20%;
+  }
+  .badge {
+    display: inline-block;
+    font-size: small;
+    color: $color-text-white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: #607d8b;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    margin-right: 0.8em;
+    border-radius: 4px 0 0 4px;
+  }
 }
