--- a/lib/styles/_variables.scss
+++ b/lib/styles/_variables.scss
@@ -21,6 +21,8 @@ $color-border-gray: lighten($color-text-gray, 30);
 // borders
 
 $border-radius: 4px;
+$border-width-general: 2px;
 
 // animations
+
 $trans-speed: 86ms;
