--- a/lib/styles/global.scss
+++ b/lib/styles/global.scss
@@ -168,6 +168,12 @@ nav {
   }
 }
 
+input[type="checkbox"] {
+  &:checked {
+    background-color: $color-flavour;
+  }
+}
+
 .table {
   th,
   td {
